# pripramot

./: .data  .gitignore  .pdata  .pre-commit-config.yaml  .rdata  .reloc  CLAUDE.md  CONTRIBUTING.md  Duet AI README.md  GEMINI.md  Product.html  README.md  gstore-manifest.json  index.html  manifest.json  pyproject.toml  requirements.txt  style.css
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  pages.yml
.rsrc/: version.txt
.rsrc/GROUP_ICON/: 32512
.rsrc/ICON/: 9
Product_files/: css2(1)  style.css
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/gstore/: logging_config.py  manifest_validator.py
tests/: test_manifest_validator.py  test_webhook_receiver.py
webhook/: __init__.py  receiver.py
